--- a/frameslib/build.gradle
+++ b/frameslib/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'io.reactivex.rxjava2:rxjava:2.2.10'
-    api 'com.github.wseemann:FFmpegMediaMetadataRetriever:1.0.14'
+    implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever:1.0.14'
 
     compile "androidx.core:core-ktx:1.0.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
